fix squished table headers on people page
fixes CNVS-33482

test plan:
- go to the people page on a course
- note that the table headers are not squished together

Reviewed-on: https://gerrit.instructure.com/95932
Tested-by: Jenkins
QA-Review: David Tan <dtan@instructure.com>
Product-Review: Felix Milea-Ciobanu <fmileaciobanu@instructure.com>

--- a/app/stylesheets/bundles/roster.scss
+++ b/app/stylesheets/bundles/roster.scss
@@ -5,7 +5,7 @@
   display: flex;
 }
 
-.roster {
+.roster-column {
   flex: 0 0 50%;
   display: flex;
   flex-direction: column;
